# MonoStudio

./: .clang-format  .clang-tidy  .clangd  .gitignore  .nvim.lua  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  conan_install.sh  conanfile.py
src/apps/feed-viewer/include/: CMakeLists.txt
src/apps/feed-viewer/include/feed-viewer/: feed-viewer.hpp
src/apps/feed-viewer/include/feed-viewer/program/: config.hpp  dispatcher.hpp
src/apps/vixel/include/: CMakeLists.txt
src/apps/vixel/include/vixel/game/: game.hpp
src/apps/vixel/include/vixel/program/: dispatcher.hpp  main_window.hpp  options.hpp
src/apps/vixel/include/vixel/program/config/: config.hpp  example.hpp
src/engine/include/: CMakeLists.txt
src/engine/include/rflect3d/config/: base_config.hpp  parser.hpp
src/engine/include/rflect3d/core/containers/: static_vector.hpp
src/engine/include/rflect3d/core/error/: expected.hpp  log_error.hpp
src/engine/include/rflect3d/core/execution/: execution.hpp  signals.hpp  stop_token.hpp
src/engine/include/rflect3d/core/logging/: logger.hpp  logger_config.hpp
src/engine/include/rflect3d/core/misc/: passkey.hpp
src/engine/include/rflect3d/graphics/: hri.hpp
src/engine/include/rflect3d/graphics/vk/: vk_extension.hpp  vk_instance.hpp  vulkan.hpp
src/engine/include/rflect3d/input/: input.hpp
src/engine/include/rflect3d/math/: math.hpp
src/engine/include/rflect3d/platform/window/: monitor.hpp  window.hpp  window_builder.hpp  window_config.hpp  window_handle.hpp  window_modes.hpp  window_tracker.hpp  window_types.hpp
src/engine/include/rflect3d/platform/window/utils/: callbacks.hpp  context.hpp  defaults.hpp  resolution.hpp
src/engine/include/rflect3d/program/: handle_error.hpp  options.hpp
src/engine/include/rflect3d/render/: renderer.hpp  vertex.hpp  viewport.hpp
src/engine/include/rflect3d/window/: monitor.hpp  window.hpp  window_builder.hpp  window_config.hpp  window_handle.hpp  window_modes.hpp  window_tracker.hpp
src/engine/include/rflect3d/window/utils/: callbacks.hpp  context.hpp
src/libs/mono-core/include/: CMakeLists.txt
src/libs/mono-core/include/mono-core/config/: base_config.hpp  parser.hpp
src/libs/mono-core/include/mono-core/containers/: stable_vector.hpp
src/libs/mono-core/include/mono-core/error/: log_error.hpp
src/libs/mono-core/include/mono-core/execution/: signals.hpp  stop_token.hpp
src/libs/mono-core/include/mono-core/logging/: logger.hpp  logger_config.hpp
src/libs/mono-core/include/mono-core/misc/: defaults.hpp
src/libs/mono-core/include/mono-core/platform/: platform.hpp
src/libs/mono-core/include/mono-core/program/: handle_error.hpp  options.hpp
src/libs/mono/include/: CMakeLists.txt
src/libs/mono/include/mono/config/: base_config.hpp  config_tags.hpp  parser.hpp  parser_detail.hpp
src/libs/mono/include/mono/containers/: flat_map.hpp  hive.hpp  span.hpp  stable_vector.hpp  static_vector.hpp  tuple.hpp  unordered_flat_map.hpp
src/libs/mono/include/mono/error/: expected.hpp  log_error.hpp
src/libs/mono/include/mono/execution/: execution.hpp  expect.hpp  inspect.hpp  signals.hpp  stop_token.hpp
src/libs/mono/include/mono/logging/: logger.cpp  logger.hpp  logger_config.hpp
src/libs/mono/include/mono/meta/: concepts.hpp
src/libs/mono/include/mono/meta/detail/: specialization_of.hpp  template_parameter_of.hpp
src/libs/mono/include/mono/misc/: as_span.hpp  defaults.hpp  passkey.hpp  reference.hpp  start_lifetime_as.hpp
src/libs/mono/include/mono/platform/: platform.hpp
src/libs/mono/include/mono/program/: handle_error.hpp  options.hpp
src/libs/mono/include/mono/ranges/: cycle_view.hpp  enumerate.hpp
src/libs/reflect3d/: CMakeLists.txt
src/libs/reflect3d/assets/shaders/: hardcoded_triangle.slang  reflect_float_formats.slang  reflect_int_formats.slang  reflect_uniforms_and_vertex.slang  reflect_vertex_pulling.slang  shader.slang  test_vertex_binding_reflection.slang
src/libs/reflect3d/include/: CMakeLists.txt
src/libs/reflect3d/include/reflect3d/graphics/: instance_config.hpp
src/libs/reflect3d/include/reflect3d/graphics/vk/: vk_barriers.hpp  vk_base_instance.hpp  vk_command_buffer.hpp  vk_gpu.hpp  (+26 more)
src/libs/reflect3d/include/reflect3d/render/: renderer.hpp  vertex.hpp  viewport.hpp
src/libs/reflect3d/include/reflect3d/window/: monitor.hpp  window.hpp  window_builder.hpp  window_config.hpp  window_handle.hpp  window_modes.hpp  window_tracker.hpp  window_types.hpp
src/libs/reflect3d/src/: CMakeLists.txt
src/libs/reflect3d/src/reflect3d/graphics/: backends.hpp  concepts.hpp  gfx.hpp  hri.hpp  rhi.hpp  rhi2.hpp  rhi_buffer.hpp  rhi_concept.hpp  rhi_concepts.hpp  rhi_gpu.hpp  rhi_types.hpp  surface.hpp
src/libs/reflect3d/src/reflect3d/input/: input.hpp
src/libs/reflect3d/src/reflect3d/math/: math.hpp
src/libs/reflect3d/src/reflect3d/render/: mesh.hpp  renderer.hpp  vertex.hpp
src/libs/reflect3d/src/reflect3d/window/: monitor.hpp  window.hpp  window_builder.hpp  window_config.hpp  window_modes.hpp  window_types.hpp
src/libs/reflect3d/tests/: CMakeLists.txt
src/libs/reflect3d/tests/assets/shaders/: basic_shader.slang  reflect_edge_cases.slang  reflect_multi_binding.slang  test_bindless_shader.slang
src/libs/reflect3d/tests/integration/: CMakeLists.txt
src/libs/reflect3d/tests/integration/render/: common.hpp  test_multiple_surfaces.cpp  test_multiple_surfaces2.cpp  test_square.cpp  test_square2.cpp  test_triangle.cpp  test_triangle2.cpp  test_uniform_buffer.cpp  test_vk_multiple_surfaces.cpp  test_vk_square.cpp  test_vk_triangle.cpp
src/libs/reflect3d/tests/integration/window/: common.hpp  test_monitors.cpp  test_multiple_windows.cpp  test_window_changes.cpp  test_window_modes.cpp
src/libs/reflect3d/tests/runtime/: CMakeLists.txt  test_input.cpp
src/libs/reflect3d/tests/runtime/graphics/: test_frame_index.cpp
src/libs/reflect3d/tests/runtime/window/: test_window.cpp  test_window_builder.cpp  test_window_modes.cpp  test_window_tracker.cpp
src/libs/reflect3d/tests/static/: CMakeLists.txt  graphics_api.cpp  vk_api.cpp  vk_to_native.cpp
(+388 files in other folders)
